small fixes, update in checkFileAndUpdate handler in presign service
